fix: overflow legend pie chart

--- a/src/styles/components/Chart.scss
+++ b/src/styles/components/Chart.scss
@@ -37,6 +37,7 @@
       }
     }
   }
+
   .custom-legend {
     padding-left: 50px;
     position: relative;
@@ -64,6 +65,15 @@
 
     .hide-legend {
       opacity: 0.5;
+    }
+  }
+
+  & > .recharts-legend-wrapper {
+    overflow: auto;
+
+    & > div {
+      max-height: 350px;
+      margin-right: 20px;
     }
   }
 }
